--- a/slides/index.html
+++ b/slides/index.html
@@ -8,59 +8,12 @@
     </head>
     <body>
         <div class="reveal">
-            <div class="slides">
-                <section data-markdown="2018-07_es-Derecho-liberal.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
-
-                <!-- Slides are separated by newline + three dashes + newline, vertical slides identical but two dashes -->
-                <section data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$"><script type="text/template">
-
-
-
-
-
-
-Introducción al Derecho liberal
-===
-
----
-
-Jan Krepelka
-
-Universidad de Verano Instituto Juan de Mariana, Lanzarote, Julio 2018
-
----
-
-
-## Plan
-
-1. El problema: la voluntad de derechos asimétricos
-2. Derechos asimétricos son nihilismo
-3. La solución: el Derecho
-4. Los enemigos del Derecho
-5. Conclusión: la importancia del Derecho
-
----
-
-## 1. El problema: la voluntad de derecho asimétrico
-
-
-
-
-
-
-
-
-
-                </script></section>
-            </div>
+            <div class="slides"></div>
         </div>
 
         <script src="lib/head.min.js"></script>
         <script src="lib/reveal.min.js"></script>
         <script src="lib/jquery-3.2.1.min.js"></script>
         <script src="lib/init.js"></script>
-        <script type="text/javascript">
-
-        </script>
     </body>
 </html>
