--- a/slides/derecho-liberal/index.html
+++ b/slides/derecho-liberal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Introducción al Derecho liberal</title>
+        <title>Derecho liberal</title>
         <link rel="stylesheet" href="../../lib/reveal.min.css">
         <link rel="stylesheet" href="../../lib/moon.min.css">
     </head>
@@ -10,7 +10,7 @@
         <div class="reveal">
             <div class="slides">
                 <section
-                    data-markdown="Introduccion-al-Derecho-liberal.md"
+                    data-markdown="text/index.md"
                     data-separator="^\n---\n$"
                     data-separator-vertical="^\n--\n$"
                     data-separator-notes="^---Texto---">
