fix media display issue for texts

--- a/slides/derecho-liberal/index.html
+++ b/slides/derecho-liberal/index.html
@@ -10,7 +10,7 @@
         <div class="reveal">
             <div class="slides">
                 <section
-                    data-markdown="textos/index-html.md"
+                    data-markdown="index-html.md"
                     data-separator="^\n---\n$"
                     data-separator-vertical="^\n--\n$"
                     data-separator-notes="^---Texto---">
