--- a/slides/derecho-liberal/fuentes.html
+++ b/slides/derecho-liberal/fuentes.html
@@ -10,7 +10,7 @@
         <div class="reveal">
             <div class="slides">
                 <section
-                    data-markdown="fuentes.md"
+                    data-markdown="Fuentes.md"
                     data-separator="^\n---\n$"
                     data-separator-vertical="^\n--\n$"
                     data-separator-notes="^---Texto---">
