--- a/slides/derecho-liberal/introduccion.html
+++ b/slides/derecho-liberal/introduccion.html
@@ -5,6 +5,7 @@
         <title>Introducción al Derecho liberal</title>
         <link rel="stylesheet" href="../../lib/reveal.min.css">
         <link rel="stylesheet" href="../../lib/moon.min.css">
+        <link rel="stylesheet" href="../../lib/custom.css">
     </head>
     <body>
         <div class="reveal">
